@@ -117,6 +117,10 @@ div.ploneMeetingSelectContainer.go_to_meeting_img_select_box p {
     z-index: 1;
     overflow: hidden;
 }
+div.ploneMeetingSelectContainer.go_to_meeting_img_select_box span.ploneMeetingRef {
+    font-weight: bold;
+}
+
 div.ploneMeetingSelectContainer.annex_type_img_select_box div#annex_type_img_select_box {
     min-width: 274px;
 }
