@@ -184,6 +184,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   other histories (workflow, versioning)
 - A meeting containing items in state 'returned_to_proposing_group' may not be closed anymore
 - Added boolean field Meeting.extraordinarySession, informational field useable when necessary
+- Enabled leading icons for meetings as it is the case for items, added icon for Meeting.extraordinarySession
 - Simplified testing infrastructure when overrided by a plugin so th plugin does not need to call existing tests
 - When using WF adaptations 'hide_decisions_when_under_writing', do not only show the decision to MeetingManagers but to
   every users able to edit the item, this way, used together with WF adaptation 'return_to_proposing_group', the decision
